// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalFooter \`hasCancelButton\` is \`false\` default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoModalAction-root"
      data-testid="ModalFooter"
    >
      <h1>
        Test
      </h1>
    </div>
  </div>
</div>
`;

exports[`ModalFooter \`hasCancelButton\` is \`true\` \`children\` defined default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoModalAction-root"
      data-testid="ModalFooter"
    >
      <button
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-secondary PicassoButton-root"
        data-component-type="button"
        data-testid="cancel"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Close
        </span>
      </button>
      <h1>
        Test
      </h1>
    </div>
  </div>
</div>
`;

exports[`ModalFooter \`hasCancelButton\` is \`true\` \`children\` undefined default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoModalAction-root"
      data-testid="ModalFooter"
    >
      <button
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-secondary PicassoButton-root"
        data-component-type="button"
        data-testid="cancel"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;
